hphp/test/slow/ext_bcmath/mem-limit.php.expectf
Fatal error: request has exceeded memory limit in %s/mem-limit.php on line 5
